--- a/src/main/resources/configs/wechat-sdk.properties
+++ b/src/main/resources/configs/wechat-sdk.properties
@@ -7,26 +7,18 @@ wechat.ticket_cache_key=wechat_sdk_ticket_cache_key
 #公众号Token
 wechat.token=wechat_sdk
 #公众号原始ID
-wechat.oauth.originalid=gh_7e3377d06b72
+wechat.originalid=gh_7e3377d06b72
 #开发者第三方用户唯一凭证
-wechat.oauth.appid=wx2ff1a0f976b8cdd0
+wechat.appid=wx2ff1a0f976b8cdd0
 #开发者第三方用户唯一凭证密钥
-wechat.oauth.secret=06d34a36aed9060d6fb54739f36d3e71
+wechat.secret=06d34a36aed9060d6fb54739f36d3e71
 #开发者第三方用户消息加密密钥
-wechat.oauth.EncodingAESKey=knuhC54dyrVSpP1IWQAH1uAsxL9MAe6B84OtyESNmPA
-#网页授权URL
-wechat.oauth.url=http://www.china-start.cn
+wechat.EncodingAESKey=knuhC54dyrVSpP1IWQAH1uAsxL9MAe6B84OtyESNmPA
 #微信支付_商户ID
-wechat.pay.partner.id=1488883392
+wechat.pay.id=1488883392
 #微信支付_商户密钥
-wechat.pay.partner.key=30a7ed8bf8734fecb1e88bef9c6454e1
-#微信支付_通知URL
-wechat.pay.notify_url=http://www.china-start.cn/rest/user/payback
+wechat.pay.key=30a7ed8bf8734fecb1e88bef9c6454e1
+#微信支付_通知域名
+wechat.pay.notify_url=http://www.china-start.cn
 #微信支付_订单生成ip
 wechat.pay.ip=47.104.11.3
-#连接超时设置
-wechat.http.connectionTimeout=25000
-#请求超时设置
-wechat.http.readTimeout=25000
-#请求重复次数
-wechat.http.retryCount=3
