--- a/pom.xml
+++ b/pom.xml
@@ -59,6 +59,12 @@
             <artifactId>commons-lang3</artifactId>
             <version>3.6</version>
         </dependency>
+        <!--commons-io-->
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>1.3.2</version>
+        </dependency>
         <!-- servle 4.0.0 -->
         <dependency>
             <groupId>javax.servlet</groupId>
