解决jar包冲突

--- a/src/main/resources/configs/wechat-sdk.properties
+++ b/src/main/resources/configs/wechat-sdk.properties
@@ -22,3 +22,13 @@ wechat.pay.key=30a7ed8bf8734fecb1e88bef9c6454e1
 wechat.pay.notify_url=http://www.china-start.cn
 #微信支付_订单生成ip
 wechat.pay.ip=47.104.11.3
+####第三方公众平台####
+component.AppID=wx43761233b16c67c2
+component.AppSecret=48a47277960e53f3f31b480b0834a982
+component.Token=23d7148bf8584384b3be36185555d5cc
+component.Key=knuhC54dyrVSpP1IWQAH1uAsxL9MAe6B84OtyESNmPA
+####微信网站应用####
+websit.appid=
+websit.AppSecret=
+
+
