--- a/pom.xml
+++ b/pom.xml
@@ -61,15 +61,15 @@
         </dependency>
         <!--commons-io-->
         <dependency>
-            <groupId>org.apache.commons</groupId>
+            <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>1.3.2</version>
+            <version>2.5</version>
         </dependency>
-        <!-- servle 4.0.0 -->
+        <!-- servle 3.1.0 -->
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>javax.servlet-api</artifactId>
-            <version>4.0.0</version>
+            <version>3.1.0</version>
         </dependency>
         <!-- dom4j -->
         <dependency>
